libs/modkit-macros/tests/ui/fail/deps_not_array.rs
use modkit_macros::module;

#[module(name="x", deps="db")]
pub struct X;

fn main() {}
