libs/modkit-macros/tests/ui/fail/deps_not_array.stderr
error: deps must be an array, e.g. deps = ["db", "auth"]
 --> tests/ui/fail/deps_not_array.rs:3:25
  |
3 | #[module(name="x", deps="db")]
  |                         ^^^^
